samples/_failures_safe/1761077352_a5fc70_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e1e39a0c.c: In function ‘main’:
./samples/SAFE/__tmp_e1e39a0c.c:157:21: error: expected declaration or statement at end of input
  157 |                     printf("Sum of first %d terms of series 1/n^2 is %.10f\n", terms, result);
      |                     ^~~~~~
./samples/SAFE/__tmp_e1e39a0c.c:157:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e1e39a0c.c:157:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e1e39a0c.c:157:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e1e39a0c.c:157:21: error: expected declaration or statement at end of input
